tests/NormalTests/paczka1/fuzzy1/32275396.err
Error in line 2: in3e S453 23,0
Error in line 7: in3e A6 6,7
Error in line 20: beXcDpEa A556 9,8
Error in line 35: beXcDpEa S423 8,32
